k8s/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iagocavalcante-blog
  labels:
    name: iagocavalcante-blog
