k8s/manifests/blog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-app
  namespace: iagocavalcante-blog
spec:
  selector:
    app: blog-app
  ports:
    - port: 4000
      targetPort: 4000
  type: ClusterIP
